deploy/kubenetes/alluxio/proxy.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: alluxio-proxy
  namespace: ava
spec:
  rules:
  - host: "alluxio-proxy.ava.kegate-jq.cloudappl.com"
    http:
      paths:
      - backend:
          serviceName: alluxio-proxy-srv
          servicePort: 39999
        path: /
---
apiVersion: v1
kind: Service
metadata:
  name: alluxio-proxy-srv
  namespace: ava
  labels:
    app: alluxio-proxy-srv
spec:
  ports:
  - port: 39999
    name: web
  clusterIP: None
  selector:
    app: alluxio-proxy
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alluxio-proxy
  labels:
    app: alluxio-proxy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: alluxio-proxy
  template:
    metadata:
      labels:
        app: alluxio-proxy
    spec:
      hostNetwork: true
      imagePullSecrets:
        - name: atlab-images
      containers:
      - name: alluxio-proxy
        image: reg-xs.qiniu.io/atlab/alluxio:latest
        command: ["/entrypoint.sh"]
        args: ["proxy"]
        ports:
        ports:
        - containerPort: 39999
        resources:
          requests:
            cpu: 0.3
            memory: 5Gi 
          limits:
            cpu: 1
            memory: 6Gi
